--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,8 @@
 @import "./reset";
+@import "config/colors";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
+@import "modules/user";
+@import "modules/flash";
 @import "./variable";
 @import "./messages";
