--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,14 +2,14 @@
   .chat-side__user-name
     .top-items
       %p.top-items__name
-        わたし
+        = current_user.name
       %ul.top-items__icons
         %li.top-items__icons__new-group
-        = link_to '#' , class: 'new-group' do
-          = icon('fas','edit')
+        = link_to '#' do
+          = icon('fas','edit', class: 'new-group')
         %li.top-items__icons__edit-user
-        = link_to '#' , class: 'edit-user' do
-          = icon('fas','cog')
+        = link_to edit_user_path(current_user)  do
+          = icon('fas','cog', class: 'edit-user')
   .chat-side__group-list
     .group
       %p.group__name
