更新しました

--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -48,6 +48,8 @@
       &__name {
         font-size: 15px;
         margin-bottom: 5px;
+        color: $color-white;
+        font-weight: bold;
       }
       &__latest-message {
         font-size: 11px;
