--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,19 +5,16 @@
         = current_user.name
       %ul.top-items__icons
         %li.top-items__icons__new-group
-        = link_to '#' do
+        = link_to new_group_path do
           = icon('fas','edit', class: 'new-group')
         %li.top-items__icons__edit-user
         = link_to edit_user_path(current_user)  do
           = icon('fas','cog', class: 'edit-user')
   .chat-side__group-list
-    .group
-      %p.group__name
-        グループA
-      %p.group__latest-message
-        まだメッセージはありません
-    .group
-      %p.group__name
-        グループ10
-      %p.group__latest-message
-        こんにちは
+    - current_user.groups.each do |group|
+      .group
+        = link_to do
+          %p.group__name
+            = group.name
+        %p.group__latest-message
+          まだメッセージはありません
