--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,35 +2,36 @@
   .chat-main__group
     .chat-group
       %h2.chat-group__name
-        グループ10
+        = @group.name
       %ul.chat-group__member
-        Member : わたし
-    = link_to '#' ,class: 'group-edit' do
+        Member:
+        %ul
+          - @group.users.each do |user|
+            %li  
+              = user.name
+    = link_to edit_group_path(@group), class: 'group-edit' do
       .group-edit__btn
         edit
   .chat-main__message-list
-    .message
-      .message__upper-info
-        %p.message__upper-info__user-name
-          わたし
-        %p.message__upper-info__date
-          2020-01-06(Mon) 10:00:29
-      %p.message__text
-        こんにちは
-      .message__upper-info
-        %p.message__upper-info__user-name
-          わたし
-        %p.message__upper-info__date
-          2020-01-06(Mon) 18:12:32
-      %p.message__text
-        こんばんわ
+    - @messages.each do |message|
+      .message
+        .message__upper-info
+          %p.message__upper-info__user-name
+            = message.user.name
+          %p.message__upper-info__date
+            = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
+        %p.message__text
+          - if message.content.present?
+            %p.message__text__content
+              = message.content
+      = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
+
   .chat-main__message-form
     .message-box
-      .message-box__input
-        .input-place
-          type a message
-      %label{class: "message-box__image"}
-        = icon('fas', 'image')
-        %input{type: "file", class: "message-box__image__text"}
-      .submit-btn
-        Send
+      = form_for [@group, @message] do |f|
+        = f.text_field :content, class: 'message-box__input', placeholder: 'type a message'
+        .form-mask
+          = f.label :image, class: "message-box__image" do
+            = icon('fas', 'image')
+            = f.file_field :image, class: "message-box__image__text"
+          = f.submit 'Send', class: 'form-submit'
