[WIP]自動更新機能の実装
ChatSpace自動更新機能を実装しました
#WHAT
自動更新機能を実装する

#WHY
ChatSpaceの根幹をなす機能の一つである為

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -14,7 +14,7 @@
         edit
   .chat-main__message-list
     - @messages.each do |message|
-      .message
+      .message{data: {message: {id: message.id}}}
         .message__upper-info
           %p.message__upper-info__user-name
             = message.user.name
